correct calendar cell's padding (wasn't properly aligned in Chrome)

--- a/src/sass/components/_jquery-ui.scss
+++ b/src/sass/components/_jquery-ui.scss
@@ -258,7 +258,8 @@ img.ui-datepicker-trigger {
             text-align: right;
 
             a {
-                padding: .25em .3em .25em 0;
+                padding-right: .4em;
+                padding-left: 0;
                 border-radius: $border-radius-base;
             }
 
